# TimeManager

./: .env.example  .gitignore  README.md  milvus-bootstrap.sh  pyproject.toml
src/: main.py
src/config/: env.py  llm_config.py  logging.py  settings.py
src/llm_solutions/: __init__.py  factory.py
src/llm_solutions/base/: __init__.py  base_bot.py
src/llm_solutions/langchain_react/: __init__.py  telegram_bot.py
src/llm_solutions/rigid_intent/: __init__.py  telegram_bot.py
src/llm_solutions/rigid_intent/intent_parser/: llm_parser.py
src/prompts/: __init__.py  templates.py
src/services/: event_milvus_connector.py  event_semantic_search.py  google_calendar.py  mcp_server.py  message_parser.py  telegram_bot.py  time_slot_manager.py
src/services/intent_parser/: __init__.py  intent_models.py  llm_parser.py
src/utils/: __init__.py  time_utils.py
